--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -11,18 +11,19 @@ html{
 
 .layer1{
 	width: 100%;
-	height: 300px;
-	background-color: black;
+	height: 450px;
+	background-color: #222222;
 	//position: absolute;
 	margin: 0;
 	padding: 0;
+	index: 1;
 }
 
 .layer1 .toolbar{
 	width: 80%;
 	height: 300px;
 	margin: 0 auto;
-	background-color: black;
+	background-color: #222222;
 }
 
 .layer1 .toolbar img{
@@ -46,3 +47,108 @@ html{
 	top: 0px;
 	right: 0px;
 }
+
+.layer2{
+	width: 70%;
+	height: 200px;
+	background-color: green;
+	margin: 0 auto;
+	position: relative;
+	top: -100px;
+	border-radius: 15px;
+	z-index: 3;
+}
+
+.layer2 h2{
+	position:relative;
+	left: 20px;
+	top: 20px;
+}
+
+.layer3{
+	widht: 90%;
+	height: 700px;
+	background-color: #eeeeee;
+	text-align: center;
+	position: relative;
+	top: -200px;
+	z-index: 1;
+}
+
+.layer3 h1{
+	position: relative;
+	text-align: left;
+	top: 150px;
+	left: 50px;
+}
+
+.layer3 .model{
+	margin: auto 20px;
+	width: 20%;
+	height: 400px;
+	border-radius: 10px;
+	box-shadow: 0 0 20px #000033;
+	display: inline-block;
+	text-align: center;
+	border-style: solid;
+	position: relative;
+	top: 200px;
+	float: left;
+}
+
+.layer3 .jigou{
+	background-color: gray;
+}
+
+.layer3 .shijue{
+	background-color: cornflowerblue;
+}
+
+.layer3 .kongzhi{
+	background-color: green;
+}
+
+.layer3 .donghua{
+	background-color: yellow;
+}
+
+.events{
+	width:100%;
+	height: 500px;
+	background-color: burlywood;
+	position: relative;
+	top: -150px;
+	z-index:1;
+}
+
+.events p{
+	font-size: 40px;
+	padding: 0;
+	margin: 0;
+	position: relative;
+	left: 20px;
+	float:left;
+}
+
+.endbar{
+	width: 100%;
+	height: 50px;
+	background-color: black;
+	line-height: 50px;
+	text-align: center;
+}
+
+.endbar p{
+	color:white;
+}
+/*
+.layer3 ul{
+	list-style: none;
+	display: inline;
+	padding: 0 0;
+}
+
+.layer3 ul li{
+	display: inline;
+}
+*/
