--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -1,19 +1,18 @@
 body{
 	background-color: cadetblue;
-	width: 100%;
-	height: 100%;
+	//width: 100%;
+	//height: 100%;
 }
 
 html{
 	//width:100%;
-	height: 100%;
+	//height: 100%;
 }
 
 .layer1{
 	width: 100%;
 	height: 450px;
 	background-color: #222222;
-	//position: absolute;
 	margin: 0;
 	padding: 0;
 	index: 1;
@@ -28,15 +27,27 @@ html{
 
 .layer1 .toolbar img{
 	position: relative;
-	top : 25px;
+	top : 20px;
 }
 
 .layer1 .toolbar p{
 	color:white;
 	position: relative;
-	top: 20px;
+	top: 30px;
 	left: 10px;
 	font-size: 30px;
+}
+
+.layer1 .baike{
+	text-decoration: none;
+	color: #6495ED;
+	position: relative;
+	font-size: 20px;
+	left: 10px;
+}
+
+.layer1 .baike:hover{
+	color: aqua;
 }
 
 .layer1 .toolbar .cover{
@@ -44,30 +55,47 @@ html{
 	height: 100%;
 	float: right;
 	position: relative;
-	top: 0px;
+	top: 10px;
 	right: 0px;
 }
 
-.layer2{
-	width: 70%;
-	height: 200px;
-	background-color: green;
+.layer2, .achievement{
 	margin: 0 auto;
 	position: relative;
-	top: -100px;
+	box-shadow: #000000 0px 0px 30px;
 	border-radius: 15px;
 	z-index: 3;
 }
 
-.layer2 h2{
+.layer2{
+	width: 70%;
+	top: -100px;
+	background-color: green;
+	height: 200px;
+}
+
+.blocktitle{
 	position:relative;
 	left: 20px;
 	top: 20px;
 }
 
+.bfintro{
+	position: relative;
+	left: 5%;
+	width: 90%;
+	top: 10px;
+}
+
+.layer2 p{
+	color: white;
+	line-height: 30px;
+	font-size: 17px;
+}
+
 .layer3{
 	widht: 90%;
-	height: 700px;
+	height: 900px;
 	background-color: #eeeeee;
 	text-align: center;
 	position: relative;
@@ -112,21 +140,80 @@ html{
 	background-color: yellow;
 }
 
+.layer3 .text{
+	width: 90%;
+	text-align: left;
+	position: relative;
+	left: 5%;
+}
+
+.layer3 p{
+	font-size: 17px;
+}
+
+.layer3 p b{
+	font-size: 20px;
+}
+
+.achievement{
+	width: 80%;
+	background-color: chocolate;
+	top: -300px;
+	height: 650px;
+}
+
+.achievement p{
+	color: beige;
+}
+
+.achievement h1{
+	position: relative;
+	top: 
+}
+
 .events{
 	width:100%;
-	height: 500px;
+	height: 900px;
 	background-color: burlywood;
 	position: relative;
-	top: -150px;
+	top: -500px;
 	z-index:1;
 }
 
-.events p{
-	font-size: 40px;
+.events .offsetdiv{
+	display: inline;
+	position: relative;
+	width: 100%;
+	top: 200px;
+}
+
+.events ul{
+	list-style: none;
+}
+
+.events ul li{
+	display: block;
+	padding: 0 0;
+}
+
+.events ul img{
+	display: inline;
+	position: relative;
+	left: 10%;
+}
+
+.events h1{
+	position: relative;
+	top: 10px;
+	left: 50px;
+}
+
+.events h2{
 	padding: 0;
 	margin: 0;
 	position: relative;
-	left: 20px;
+	//top: 50px;
+	left: 50px;
 	float:left;
 }
 
