--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -77,14 +77,12 @@ html{
 .blocktitle{
 	position:relative;
 	left: 20px;
-	//top: 20px;
 }
 
 .bfintro{
 	position: relative;
 	left: 5%;
 	width: 90%;
-	//top: 10px;
 }
 
 .layer2{
@@ -115,9 +113,9 @@ html{
 }
 
 .layer3 .model{
-	padding: 20px auto;
-	margin: auto 20px;
-	width: 21%;
+	padding: 40px auto;
+	margin: auto 2%;
+	width: 20%;
 	min-height: 400px;
 	//height: 400px;
 	border-radius: 10px;
@@ -128,6 +126,11 @@ html{
 	position: relative;
 	top: 200px;
 	float: left;
+}
+
+.layer3 .text{
+	width: 85%;
+	margin: 0 auto;
 }
 
 .layer3 .jigou{
@@ -146,13 +149,6 @@ html{
 	background-color: yellow;
 }
 
-.layer3 .text{
-	width: 90%;
-	text-align: left;
-	position: relative;
-	left: 5%;
-}
-
 .layer3 p{
 	font-size: 17px;
 }
@@ -165,18 +161,16 @@ html{
 	width: 80%;
 	background-color: chocolate;
 	top: -300px;
-	height: 650px;
+	padding: 20px 20px;
 }
 
 .achievement p{
 	color: beige;
 	position: relative;
-	left: 20px;
 }
 
 .achievement h1{
 	position: relative;
-	left: 20px
 }
 
 .events{
