--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -1,12 +1,9 @@
 body{
 	background-color: cadetblue;
-	//width: 100%;
-	//height: 100%;
 }
 
-html{
-	//width:100%;
-	//height: 100%;
+h1{
+	width: 500px;
 }
 
 .layer1{
@@ -117,7 +114,6 @@ html{
 	margin: auto 2%;
 	width: 20%;
 	min-height: 400px;
-	//height: 400px;
 	border-radius: 10px;
 	box-shadow: 0 0 20px #000033;
 	display: inline-block;
@@ -125,7 +121,6 @@ html{
 	border-style: solid;
 	position: relative;
 	top: 200px;
-	float: left;
 }
 
 .layer3 .text{
@@ -162,6 +157,7 @@ html{
 	background-color: chocolate;
 	top: -300px;
 	padding: 20px 20px;
+	margin: 0 auto;
 }
 
 .achievement p{
