--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -60,6 +60,7 @@ h1{
 	margin: 0 auto;
 	position: relative;
 	box-shadow: #000000 0px 0px 30px;
+	padding: 20px 0px 20px 0px;
 	border-radius: 15px;
 	z-index: 3;
 }
@@ -83,7 +84,7 @@ h1{
 }
 
 .layer2{
-	padding: 20px;
+	padding: 20px 0px 40px 0px;
 }
 
 .layer2 p{
@@ -110,7 +111,7 @@ h1{
 }
 
 .layer3 .model{
-	padding: 40px auto;
+	padding: 20px 0px 20px 0px;
 	margin: auto 2%;
 	width: 20%;
 	min-height: 400px;
@@ -156,7 +157,6 @@ h1{
 	width: 80%;
 	background-color: chocolate;
 	top: -300px;
-	padding: 20px 20px;
 	margin: 0 auto;
 }
 
