--- a/src/jx/css/mainpage.css
+++ b/src/jx/css/mainpage.css
@@ -1,5 +1,6 @@
 body{
 	background-color: cadetblue;
+	position: relative;
 }
 
 h1{
@@ -69,7 +70,6 @@ h1{
 	width: 70%;
 	top: -100px;
 	background-color: green;
-	height: 200px;
 }
 
 .blocktitle{
@@ -81,10 +81,6 @@ h1{
 	position: relative;
 	left: 5%;
 	width: 90%;
-}
-
-.layer2{
-	padding: 20px 0px 40px 0px;
 }
 
 .layer2 p{
@@ -171,10 +167,11 @@ h1{
 
 .events{
 	width:100%;
-	height: 900px;
+	height: 1000px;
+	padding: 20px auto 20px auto;
 	background-color: burlywood;
 	position: relative;
-	top: -500px;
+	margin-top: -500px;
 	z-index:1;
 }
 
@@ -185,34 +182,33 @@ h1{
 	top: 200px;
 }
 
-.events ul{
-	list-style: none;
-}
-
-.events ul li{
-	display: block;
-	padding: 0 0;
-}
-
-.events ul img{
-	display: inline;
-	position: relative;
-	left: 10%;
-}
-
 .events h1{
 	position: relative;
 	top: 10px;
 	left: 50px;
 }
 
-.events h2{
-	padding: 0;
-	margin: 0;
-	position: relative;
-	//top: 50px;
-	left: 50px;
-	float:left;
+.pictures{
+	margin: 0 auto;
+	align: center;
+	height: 200px;
+	width: 80%;
+}
+
+.pictures .tr{
+	padding: 0px 0px 
+	margin: 0 auto;
+}
+
+.pictures .td{
+	padding: 0px 0px;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.pictures img{
+	padding: 0px 0px;
+	margin: 0 0;
 }
 
 .endbar{
